--- a/MonsterAPP_Storyboard_Wireframes/MonsterAPP_Storyboard_Wireframes/MainStoryboard.storyboard
+++ b/MonsterAPP_Storyboard_Wireframes/MonsterAPP_Storyboard_Wireframes/MainStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12E55" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="psK-nZ-vZC">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="11G63" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="psK-nZ-vZC">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
@@ -686,70 +686,6 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
         <image name="firstEgg_left.png" width="140" height="163"/>
         <image name="firstEgg_right-half.png" width="108" height="163"/>
     </resources>
-    <classes>
-        <class className="DueDateViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/DueDateViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="doneDateButton:"/>
-                <relationship kind="outlet" name="dateDueQuestion" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="dueDatePicker" candidateClass="UIDatePicker"/>
-            </relationships>
-        </class>
-        <class className="EggHatchesViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/EggHatchesViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="enterNameButton:"/>
-                <relationship kind="outlet" name="monsterNameField" candidateClass="UITextField"/>
-            </relationships>
-        </class>
-        <class className="LoginViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/LoginViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="loginButton:"/>
-                <relationship kind="outlet" name="emailField" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="nameField" candidateClass="UITextField"/>
-            </relationships>
-        </class>
-        <class className="NewEggViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NewEggViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="achievementText" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="congratsLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="hintLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="shineRays" candidateClass="SparkleImageView"/>
-                <relationship kind="outlet" name="tapInstructionLabel" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="ProjectNameVC" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ProjectNameVC.h"/>
-            <relationships>
-                <relationship kind="action" name="nameWithButton:"/>
-                <relationship kind="outlet" name="nameRequestLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="titleTextField" candidateClass="UITextField"/>
-            </relationships>
-        </class>
-        <class className="ProjectPickerVC" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ProjectPickerVC.h"/>
-            <relationships>
-                <relationship kind="outlet" name="projectTypesTable" candidateClass="UITableView"/>
-            </relationships>
-        </class>
-        <class className="ScrollView_Test" superclassName="UIScrollView">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ScrollView_Test.h"/>
-        </class>
-        <class className="SparkleImageView" superclassName="UIImageView">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/SparkleImageView.h"/>
-        </class>
-        <class className="TaskListViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/TaskListViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="hpLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="projectDetailLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="taskTable" candidateClass="UIView"/>
-                <relationship kind="outlet" name="xpLabel" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
