--- a/MonsterAPP_Storyboard_Wireframes/MonsterAPP_Storyboard_Wireframes/en.lproj/MainStoryboard.storyboard
+++ b/MonsterAPP_Storyboard_Wireframes/MonsterAPP_Storyboard_Wireframes/en.lproj/MainStoryboard.storyboard
@@ -64,10 +64,10 @@
             </objects>
             <point key="canvasLocation" x="234" y="-758"/>
         </scene>
-        <!--View Controller-->
+        <!--Login View Controller-->
         <scene sceneID="gd9-7o-dAq">
             <objects>
-                <viewController id="xLR-tL-bC3" sceneMemberID="viewController">
+                <viewController id="xLR-tL-bC3" customClass="LoginViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Vyi-9h-xDw">
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -126,7 +126,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PZF-LG-tYC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="783" y="-737"/>
+            <point key="canvasLocation" x="739" y="-737"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="BTe-D4-rSZ">
@@ -674,6 +674,9 @@
         <image name="firstEgg.png" width="174" height="133"/>
     </resources>
     <classes>
+        <class className="LoginViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/LoginViewController.h"/>
+        </class>
         <class className="NewEggViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/NewEggViewController.h"/>
             <relationships>
